# portfolio

./: .dockerignore  .env.example  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  config.py  database.py  main.py  models.py  quiz_questions.py  redis_client.py  schemas.py
backend/graphql/: schema.py
backend/routers/: auth.py  cache.py  chat.py  database.py  misc.py  portfolio.py  quiz.py
backend/services/: data_service.py
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: ApiPlayground.svelte  AuthDemo.svelte  ContactForm.svelte  DatabaseChallenge.svelte  Terminal.svelte
frontend/src/lib/components/: CustomSelect.svelte
frontend/src/lib/components/animations/: ScrollReveal.svelte
frontend/src/lib/components/layout/: Container.svelte  Footer.svelte  Grid.svelte  PlaygroundLayout.svelte  Section.svelte
frontend/src/lib/components/loaders/: SkeletonLoader.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  CodeBlock.svelte  Modal.svelte
frontend/src/lib/utils/: transitions.ts
frontend/src/pages/: APIPlayground.svelte  CachingPlayground.svelte  ChatPlayground.svelte  Contact.svelte  DatabasePlayground.svelte  Home.svelte  JWTPlayground.svelte
